2022-01-30  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
  * doc/gputils.lyx:
    Updated the documentation.

2022-01-30  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
  * header/Makefile.am,
    header/Makefile.in,
    header/p16f184...inc,
    header/p16lf184...inc,
    libgputils/gpcfg.h,
    libgputils/gpcfg-table.c,
    libgputils/gpprocessor.c,
    libgputils/gpregister.h,
    libgputils/gpreg-table.c,
    lkr/16f184.._g.lkr,
    lkr/16lf184.._g.lkr,
    lkr/Makefile.am,
    lkr/Makefile.in:
    Added patch: "#77 Add PIC16F184XX devices"
    Thanks to Schelte Bron.

2022-01-30  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
  * gpasm/parse.y:
    Added patch: "#76 Parser doesn't allow more than one unary operator"
    Thanks to Schelte Bron.

2022-01-30  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
  * gputils/gpasm/util.c:
    Added patch: "#75 Prevent globals/externals from being created in .idlocs coff section"
    Thanks to Robert Nee.

2022-01-29  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
  * gpasm/gpasm.c,
    gpasm/gpasm.h.in,
    gplink/gplink.c,
    gplink/gplink.h.in,
    gplink/map.c,
    gputils/gpstrip.c,
    libgputils/gpcofflink.c,
    libgputils/gpcoffopt.c,
    libgputils/gpcoffopt.h,
    libgputils/gpwriteobj.c,
    libgputils/gpwriteobj.h:
    Added a big patchset from Gonzalo Pérez de Olaguer Córdoba:
      "#74 patches needed to support sdcc pic14 backend"
      gpasm-increase-section-name-length
      add-dump-coff-option
      gpcofflink-report-missing-symbols
      gplink-force-map-symbols
      gplink-experimental-removal-optimizations
      gplink-experimental-banksel-and-pagesel-removal
      gplink-experimental-pcallw-removal
    Thanks for this.

2019-02-23  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
  * gpasm/directive.c:
    Fixed bug: "#309 GPLINK error when BRA jumps to MOVLB instruction"
    Added patch from Anonymous.
    Thanks to Michael Widlok and Anonymous.
